--- a/sport-events-app/src/index.html
+++ b/sport-events-app/src/index.html
@@ -2,22 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Workshop</title>
+    <title>Sport Events</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Parisienne&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/3cd69e2433.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
     <app-root></app-root>
